* Move OS and Platform guessing regexps into DB and allow to edit them.
* Allow to use field names in incoming email.
* Flash comment when going to its anchor link.
* Detect changes for multi-selects during mid-air collisions.
* Automatically decode known MediaWiki URLs in comments and show them nicely
  using <wikiname>:[[Page name#Section]] syntax.

Bugfixes:
* More correct select field population on bug and query forms.
* Fix read-only display of bug fields to work again.
* sanitycheck.cgi fixed and works again.
* Make "Clear flag requests when closing bugs" preference actually work.

Refactoring:
* Remove CGI.pm usage for getting query parameters and cookies from everywhere.
  *.cgi scripts now use Bugzilla->input_params and Bugzilla->cookies hashrefs.
  Bugzilla::Search, Search::Saved, Report, Chart and similar now use plain hashrefs
  instead of CGI object for passing params.
  This is faster, looks much more readable, and automatically avoids
  vulnerabilities like CVE-2014-1572 (found recently in original Bugzilla).
* Refactor result reporting, move the rest of bug-related code into Bugzilla::Bug.
  This allows to not call process_bug.cgi from importxls.cgi and email_in.pl anymore.
* All CUSTIS-specific features moved into 'custishacks' extension; all non-specific
  features moved from 'custis' extension into core.
* Merge create/edit templates for milestones, versions, field values, keywords, classifications.
* Remove JOB_MAP hardcode that didn't allow to add custom job classes without
  modifying the core code.
* Remove parameter value hardcode that didn't allow to add custom auth modules
  without modifying the core code.
* Remove various procedural and/or unused APIs from Bugzilla modules,
  (like is_open_state, BUG_STATE_OPEN, closed_bug_statuses, LookupNamedQuery...)
* Remove some unused functions and filters from Bugzilla::Template.
* Remove some never-used obsolete field definitions from the DB.