@@ -25,6 +25,10 @@
 
 [% param_descs = {
 
+  allow_commentsilent =>
+    "If this is on, users are allowed to make bug changes without notifying" _
+    " anyone by checking the Silent checkbox."
+
   duplicate_or_move_bug_status =>
     "When $terms.abug is marked as a duplicate of another one " _
     "or is moved to another installation, use this $terms.bug status."
